--- a/src/pages/board/list.html
+++ b/src/pages/board/list.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="list.css">
 </head>
 <body>
   <h1>게시물 목록 조회</h1>
   <ul id="postList"></ul>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
+  <script type="module" src="list.js"></script>
 </body>
 </html>
