--- a/src/pages/board/list.html
+++ b/src/pages/board/list.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="list.css">
 </head>
 <body>
-  <h1>게시물 목록 조회</h1>
+  <h1>게시물 목록 조회 - 수정</h1>
   <ul id="postList"></ul>
   <script type="module" src="list.js"></script>
 </body>
